# FINAL-STACION

./: .gitignore  CMakeLists.txt
.github/workflows/: main.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Analysis/: MixAnalysisEngine.cpp  MixAnalysisEngine.h  MixDiagnosis.h
Source/DSP/: LoudnessAnalyzer.cpp  LoudnessAnalyzer.h  SpectralAnalyzer.cpp  SpectralAnalyzer.h  TruePeakDetector.cpp  TruePeakDetector.h
Source/GUI/: MainPanel.cpp  MainPanel.h  NavigationPanel.cpp  NavigationPanel.h  TrackArchitectLookAndFeel.cpp  TrackArchitectLookAndFeel.h
Source/GUI/Views/: AboutView.cpp  AboutView.h  AnalysisView.cpp  AnalysisView.h  ConfigView.cpp  ConfigView.h  DestinoView.cpp  DestinoView.h  InspectionView.cpp  InspectionView.h  MasterView.cpp  MasterView.h  ReportView.cpp  ReportView.h  RouteView.cpp  RouteView.h  SectionView.h
Source/Learning/: ProducerProfile.cpp  ProducerProfile.h
Source/Mastering/: DynamicEQ.cpp  DynamicEQ.h  HarmonicSaturator.cpp  HarmonicSaturator.h  MasteringChain.cpp  MasteringChain.h  MasteringCompressor.cpp  MasteringCompressor.h  StereoImager.cpp  StereoImager.h  TruePeakLimiter.cpp  TruePeakLimiter.h
